; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_rhashtable.c_bucket_table_free.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_rhashtable.c_bucket_table_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bucket_table = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bucket_table*)* @bucket_table_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bucket_table_free(%struct.bucket_table* %0) #0 {
  %2 = alloca %struct.bucket_table*, align 8
  store %struct.bucket_table* %0, %struct.bucket_table** %2, align 8
  %3 = load %struct.bucket_table*, %struct.bucket_table** %2, align 8
  %4 = getelementptr inbounds %struct.bucket_table, %struct.bucket_table* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.bucket_table*, %struct.bucket_table** %2, align 8
  %9 = call i32 @nested_bucket_table_free(%struct.bucket_table* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.bucket_table*, %struct.bucket_table** %2, align 8
  %12 = call i32 @kvfree(%struct.bucket_table* %11)
  ret void
}

declare dso_local i32 @nested_bucket_table_free(%struct.bucket_table*) #1

declare dso_local i32 @kvfree(%struct.bucket_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
